--- a/public/stylesheets/partials/ranking.scss
+++ b/public/stylesheets/partials/ranking.scss
@@ -8,5 +8,38 @@
         max-width: 342px;
         border-radius: 4px;
         margin: 0 auto;
+        .container-component{
+            display: flex;
+            position: relative;
+            align-items: flex-end;
+            justify-content: flex-end;
+            .logo{
+                position: absolute;
+                left: -32px;
+            }
+            .box-title{
+                width: 75%;
+                height: 52px;
+                background-color: $base-color;
+                border-radius: 2px;
+                margin-bottom: 10px;
+                padding: 9px 40px;
+                box-sizing: border-box;
+                h1{
+                    font-family: $font-base;
+                    font-size: 30px;
+                    text-align: right;
+                    margin: 0;
+                    .hide{
+                        display: none;
+                    }
+                }
+            }
+        }
+        .ranking-section{
+            background-color: $base-color;
+            border-radius: 2px;
+            margin-top: 5px;
+        }
     }
 }
